controller: ServiceList init
